force-app/main/default/objects/Knowledge__kav/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <label>Article</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>