force-app/main/default/objects/Knowledge__kav/fields/Articles_10__c.field-meta.xml
<CustomField>
    <fullName>Articles_10__c</fullName>
    <label>Articles 10</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>