force-app/main/default/objects/Knowledge__kav/fields/Articles_11__c.field-meta.xml
<CustomField>
    <fullName>Articles_11__c</fullName>
    <label>Articles 11</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>