force-app/main/default/objects/Knowledge__kav/fields/Articles_2__c.field-meta.xml
<CustomField>
    <fullName>Articles_2__c</fullName>
    <label>Articles 2</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>