force-app/main/default/objects/Knowledge__kav/fields/Articles__c.field-meta.xml
<CustomField>
    <fullName>Articles__c</fullName>
    <label>Articles</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>