force-app/main/default/objects/Knowledge__kav/fields/breg_Answer__c.field-meta.xml
<CustomField>
    <fullName>breg_Answer__c</fullName>
    <description>Aalta BREG-57</description>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>