force-app/main/default/objects/Knowledge__kav/fields/breg_Is_Default__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-57</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>