force-app/main/default/objects/Knowledge__kav/fields/breg_Topic__c.field-meta.xml
<CustomField>
    <fullName>breg_Topic__c</fullName>
    <description>Aalta BREG-57</description>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Report</fullName>
            </value>
            <value>
                <fullName>Changes</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Notifications</fullName>
            </value>
            <value>
                <fullName>Search &amp; Buy</fullName>
            </value>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Trade Names &amp; Marks</fullName>
            </value>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>Business Naming Rules</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>