force-app/main/default/objects/Knowledge__kav/recordTypes/Articles.recordType-meta.xml
<RecordType>
    <fullName>Articles</fullName>
    <active>true</active>
    <description>Used on PVL Knowledge</description>
    <label>Articles</label>
</RecordType>