force-app/main/default/objects/Knowledge__kav/recordTypes/BREG_FAQ.recordType-meta.xml
<RecordType>
    <fullName>BREG_FAQ</fullName>
    <active>true</active>
    <description>Aalta BREG-57 - Online Help FAQ</description>
    <label>BREG FAQ</label>
</RecordType>