force-app/main/default/objects/Knowledge__kav/recordTypes/General_Knowledge.recordType-meta.xml
<RecordType>
    <fullName>General_Knowledge</fullName>
    <active>true</active>
    <label>General Knowledge</label>
</RecordType>