force-app/main/default/objects/Knowledge__kav/recordTypes/Knowledge_Articles.recordType-meta.xml
<RecordType>
    <fullName>Knowledge_Articles</fullName>
    <active>true</active>
    <label>Knowledge Articles</label>
</RecordType>